--- a/index.qmd
+++ b/index.qmd
@@ -20,7 +20,8 @@ for you to solve independently at your own pace.
 
 - **Slides:** [Introduction and Functions in R](slides/lecture1.pdf)
 - **Reading:** [Chapter 6 (AdvR)](https://adv-r.hadley.nz/functions.html)
-- **Exercises:** [A1-A7 (CSWR, Appendix
+- **Exercises:**
+  [A1-A7 (CSWR, Appendix
   A)](https://cswr.nrhstat.org/app-r#app-ex)
   - **Data:** [`infrared.txt`](data/infrared.txt)
 
@@ -47,7 +48,8 @@ for you to solve independently at your own pace.
 - **Slides:** [Measuring and Improving Performance](slides/lecture3.pdf)
 - **Reading:** [Chapter 23](https://adv-r.hadley.nz/perf-measure.html) and
   [Chapter 24](https://adv-r.hadley.nz/perf-improve.html) (Advanced R)
-- **Exercises:** [1-3 (Section 24.4.3,
+- **Exercises:**
+  [1-3 (Section 24.4.3,
   AdvR)](https://adv-r.hadley.nz/perf-improve.html#exercises-71)
 
 #### Exercise Session 2
@@ -63,14 +65,16 @@ for you to solve independently at your own pace.
 
 - **Slides:** [Parallelization and Scatterplot Smoothing](slides/lecture4.pdf)
 - **Reading:** [Chapter 3 (CSwR)](https://cswr.nrhstat.org/bivariate.html)
-- **Exercises:** [3.4 (Chapter 3,
+- **Exercises:**
+  [3.4 (Chapter 3,
   CSWR)](https://cswr.nrhstat.org/bivariate#bivariate:ex)
 
 ### Week 3
 
 #### Lecture 5: Random Number Generation and Rejection Sampling
 
-- **Slides:** [Random Number Generation and Rejection
+- **Slides:**
+  [Random Number Generation and Rejection
   Sampling](slides/lecture5.pdf)
 - **Reading:**
   - [Chapter 5 (CSwR)](https://cswr.nrhstat.org/random-number-generation), but
@@ -105,16 +109,16 @@ for you to solve independently at your own pace.
   - [Chapter 8 (CSwR)](https://cswr.nrhstat.org/likelihood-and-optimization)
   - [Chapter 9 (CSwR)](https://cswr.nrhstat.org/numopt)
 
-<!-- #### Lecture 8: Testing and Debugging -->
-<!---->
-<!-- - **Slides:** [Testing and Debugging](slides/lecture8.pdf) -->
-<!-- - **Reading:** -->
-<!--   [Chapter 22 (AdvR)](https://adv-r.hadley.nz/debugging.html#debugging) -->
-<!---->
-<!-- #### Presentation of Assignment 2 -->
-<!---->
-<!-- - **Instructions:** [Assignment 2](assignments/assignment2.html) -->
-<!---->
+#### Lecture 8: Testing and Debugging
+
+- **Slides:** [Testing and Debugging](slides/lecture8.pdf)
+- **Reading:**
+  [Chapter 22 (AdvR)](https://adv-r.hadley.nz/debugging.html#debugging)
+
+#### Presentation of Assignment 2
+
+- **Instructions:** [Assignment 2](assignments/assignment2.html)
+
 <!-- ### Week 5 -->
 <!---->
 <!-- #### Lecture 9: Likelihood Optimization -->
