--- a/slides/packages.tex
+++ b/slides/packages.tex
@@ -5,5 +5,6 @@
 \usepackage{dirtree}
 \usepackage{pdfpc}
 \usepackage{pgfplots}
+\usepackage{tikzducks}
 \usetikzlibrary{positioning}
 \usetikzlibrary{shapes.geometric}
